2009-Jan-18  yselkowitz

	* bin/cygport.in (docinto),
	* bin/dodoc,
	* bin/newdoc: Allow installing docs into custom dir under /usr/share/doc
	by calling docinto with a leading slash (e.g. /HTML/en/foo).
	* lib/kde3.cygclass (kde3_install),
	* lib/kde4.cygclass (kde4_install),
	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Use docinto /....

	* bin/cygport.in (unpack): Support .tar.lzo archives.

	* bin/cygport.in (__pkg_diff): Make .src.patch with diff -p.

	* data/cygport.nanorc: Fix regexes, replacing \< with [[:<:]], etc: 
	http://cygwin.com/ml/cygwin/2009-01/msg00531.html

2009-Jan-09  yselkowitz

	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.5.4.

2009-Jan-05  yselkowitz

	* lib/claws-mail.cygclass: Stop mangling ORIG_PN.

	* lib/kde3.cygclass (kde3_compile): Disable apidox for KDE3.

2008-Dec-18  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_compile, ruby_gnome2_install):
	Fix rdoc generation when building monolithic ruby-gnome2-all.

	* lib/pygtk.cygclass (pygtk_compile): Use pygobject-codegen-2.0 if present.

	* lib/gtkmm.cygclass: Remove all number suffixes from ORIG_PN.

	* lib/gtk2-perl.cygclass (gtk2_perl_install): Avoid mv 'same file' error.

2008-Dec-08  yselkowitz

	* bin/cygport.in (__pkg_diff): Ignore *.jlc (compiled librep lisp) files.

	* bin/cygport.in (__prepetc): Fix per-package postinst/prerm install.

	* bin/cygport.in (cygpatch): Try with and without --binary.

	* bin/cygport.in (__prepinstalldirs, __pkg_diff),
	lib/berkdb.cygclass (berkdb_autoreconf),
	lib/cross.cygclass (cross_config_sub),
	lib/gnome2.cygclass (gnome2_autoreconf),
	lib/kde3.cygclass (kde3_autoreconf):  Require stable libtool-2.2.

	* lib/gtkmm.cygclass: Improve ORIG_PN. Fix DIFF_EXCLUDES for 2.24.

	* bin/prep_fonts_dir.sh: Simplify .pcf compression code.

	* bin/prep_libtool_modules.sh: Speed up libtool version detection.

2008-Nov-26  yselkowitz

	* lib/gst-plugins0.10.cygclass: Enable experimental plugins.