@@ -978,11 +978,11 @@ cygautoreconf() {
 				done
 
 				unset ac_config_files;
+			fi
 
-				if $(grep -q /config.rpath ${d}/configure)
-				then
-					cp -f /usr/share/gettext/config.rpath ${d}/
-				fi
+			if $(grep -Eq 'AM_(GNU_GETTEXT|ICONV)' ${d}/${configure_ac})
+			then
+				cp -f /usr/share/gettext/config.rpath ${d}/
 			fi
 
 			# Automake will exit if these are not present
